--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="html5-shiv" version="3.7.3" targetFramework="net40" />
   <package id="jQuery" version="3.3.1" targetFramework="net40" />
 </packages>
