--- a/packages.config
+++ b/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="html5-shiv" version="3.7.3" targetFramework="net40" />
   <package id="jQuery" version="3.3.1" targetFramework="net40" />
+  <package id="bootstrap" version="4.0.0" targetFramework="net40" />
+  <package id="popper.js" version="1.12.9" targetFramework="net40" />
 </packages>
